--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <title>Hello, World!</title>
 </head>
 <body>
@@ -14,11 +14,11 @@
 
 <p class="p2">This is the second paragraph.</p>
      
-<img src="images/img1.jpg" class="img1">
+<img src="img1.jpg" class="img1">
 
   <p class="p3">This is the third paragraph.</p>
   <hr>
   
-<script src="/storage/emulated/0/HTML/MyFirstWeb/scripts/script.js">
+<script src="script.js">
 </body>
 </html>
