--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" href="style.css"/>
   <title>Hello, World!</title>
+ 
 </head>
 <body>
    
@@ -19,6 +20,10 @@
   <p class="p3">This is the third paragraph.</p>
   <hr>
   
-<script src="script.js">
+  <script language="JavaScript" src="script.js"></script>
+
+<p class="p4">The next line is contain a link that yoy must love.<br></p>
+<a href="https://www.pornhub.com/">Click This Link</a>
+
 </body>
 </html>
